--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
+
+
 * {
     font-family: "Roboto", sans-serif;
     color:white;
-    
-    
-  }
+}
 html{
     height: 100%;
 }
 body{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
-        
     width: auto;
     height: auto;
     background-image: url("/img/bg.png");
@@ -21,7 +23,7 @@ body{
     flex-direction: column;
 }
 button{
-    margin-top: 0;
+    margin: 0 0 20px;
     transition-duration: 0.4s;
     color:rgba(0, 0, 0, 0.8);
     background-color:rgba(255, 255, 255, 0.8);
@@ -29,8 +31,8 @@ button{
     border-radius: 5px;
     text-align: center;
     font-size: 3rem;
-
 }
+
 button:hover{
     background-color: rgba(0, 23, 128, 0.705);
     color: white;
@@ -41,12 +43,13 @@ button:hover{
     font-size: 2.5rem;
 }
 h1{
-    margin-bottom: 0 ;
+    margin: 10px 0 40px;    
     color:rgba(255, 255, 255, 0.8);
-    font-size: 9rem;
+    font-size: 7.5rem;
 }
 h2{
-    color:rgba(255, 255, 255, 0.8);
+    margin: 10px 0 40px;
+    color:rgba(255, 255, 255);
     font-size: 2.5rem;
 }
 p{
@@ -56,5 +59,3 @@ p{
 h3{
     font-size: 2rem;
 }
-
-
