--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
 }
 html{
     height: 100%;
+    background-color: rgb(21, 21, 73);
 }
 body{
+    
     display: flex;
     align-items: center;
     flex-direction: column;
