--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     text-align: center;
     width: auto;
     height: auto;
-    background-image: url("/img/bg.png");
+    background-image: url("https://wallpaper.dog/large/275561.jpg");
     background-size:auto; 
   }
 #splash{
