--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     height: auto;
     /* background-image: url("https://wallpaper.dog/large/275561.jpg");
      */
-    background-image: url("/img/bg.png");
+    background-image: url("img/bg.png");
     background-size:auto; 
   }
 #splash{
